--- a/templates/employee/attendance-employee.html
+++ b/templates/employee/attendance-employee.html
@@ -8,6 +8,7 @@
 </style>
 {% endblock head %}
 {% block body %}
+{% block nav %}{% include 'employee/navigationpanel.html' %}{% endblock nav %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
 				<div class="show_message">
@@ -24,7 +25,7 @@
 							<div class="col-sm-12">
 								<h3 class="page-title">Attendance | {{current_datetime|date:'D, d - M - Y'}}</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+									<li class="breadcrumb-item"><a href="{% url 'EmployeeIndex' %}">Dashboard</a></li>
 									<li class="breadcrumb-item active">Attendance</li>
 								</ul>
 							</div>
