--- a/templates/employee/base.html
+++ b/templates/employee/base.html
@@ -57,7 +57,81 @@
     </head>
     <body>
 
-		{% include 'employee/navigationpanel.html' %}
+	<!-- Main Wrapper -->
+	<div class="main-wrapper">
+
+		<!-- Header -->
+		<div class="header">
+
+			<!-- Logo -->
+			<a href="javascript:void(0);" id="toggle_btn">
+						<span class="bar-icon">
+							<span></span>
+							<span></span>
+							<span></span>
+						</span>
+			</a>
+			<div class="header-left ">
+				<a class="logo" href="">
+					<img alt="" height="40" src="{% static 'img/logo.png' %}" width="40">
+				</a>
+			</div>
+			<!-- /Logo -->
+
+
+			<!-- Header Title -->
+			<div class="page-title-box">
+				<h3>Webmigrates Employee</h3>
+			</div>
+			<!-- /Header Title -->
+
+			<a class="mobile_btn" href="#sidebar" id="mobile_btn"><i class="fa fa-bars"></i></a>
+
+			<!-- Header Menu -->
+			<ul class="nav user-menu">
+
+	<!--            &lt;!&ndash; Search &ndash;&gt;-->
+	<!--            <li class="nav-item">-->
+	<!--                <div class="top-nav-search">-->
+	<!--                    <a class="responsive-search" href="javascript:void(0);">-->
+	<!--                        <i class="fa fa-search"></i>-->
+	<!--                    </a>-->
+	<!--                    <form action="search.html">-->
+	<!--                        <input class="form-control" placeholder="Search here" type="text">-->
+	<!--                        <button class="btn" type="submit"><i class="fa fa-search"></i></button>-->
+	<!--                    </form>-->
+	<!--                </div>-->
+	<!--            </li>-->
+	<!--            &lt;!&ndash; /Search &ndash;&gt;-->
+
+				<li class="nav-item dropdown has-arrow main-drop">
+					<a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#"><span><img class="avatar mr-3" alt="Profile image" src="{{user.avatar.url}}"></span><span class="mr-2">{{user.username}}</span></a>
+					<div class="dropdown-menu">
+						<a class="dropdown-item" href="{% url 'EmpProfileView' user.id %}"><i class="las la-user"></i> My Profile</a>
+	<!--                    <a class="dropdown-item" href="settings.html"><i class="las la-user-cog"></i> Settings</a>-->
+						<a class="dropdown-item" href="/"><i class="las la-sign-out-alt"></i> Logout</a>
+					</div>
+				</li>
+			</ul>
+			<!-- /Header Menu -->
+
+			<!-- Mobile Menu -->
+			<div class="dropdown mobile-user-menu">
+				<a aria-expanded="false" class="nav-link dropdown-toggle" data-toggle="dropdown" href="#"><i
+						class="fa fa-ellipsis-v"></i></a>
+				<div class="dropdown-menu dropdown-menu-right">
+					<a class="dropdown-item" href="/admin_profile">My Profile</a>
+					<a class="dropdown-item" href="settings.html">Settings</a>
+					<a class="dropdown-item" href="login.html">Logout</a>
+				</div>
+			</div>
+			<!-- /Mobile Menu -->
+
+		</div>
+	</div>
+	<!-- /Header -->
+
+		{% block nav %}{% endblock nav %}
         {% block body %} {% endblock body %}
 
 
