--- a/templates/employee/edit_task_status.html
+++ b/templates/employee/edit_task_status.html
@@ -18,7 +18,27 @@
                         {{ form.task_status|as_crispy_field }}
                     </div>
                     <div class="form-group">
-                        {{ form.task_time|as_crispy_field }}
+                        <label>Task time</label>
+                        <div class="row ">
+                            <div class="col-md-4">
+                                <div class="form-group form-focus select-focus">
+                                    <input type="number" name="task_time_0" class="form-control floating" id="id_task_time_0" value="{{task.task_time.days}}">
+                                    <label class="focus-label">Day</label>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group form-focus select-focus">
+                                    <input type="number" name="task_time_1" class="form-control" id="id_task_time_1" {% if total_hours %}value="{{total_hours}}"{% endif %}>
+                                    <label class="focus-label">Hours</label>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-group form-focus select-focus">
+                                    <input type="number" name="task_time_2" class="form-control" id="id_task_time_2" {% if total_minutes %}value="{{total_minutes}}"{% endif %}>
+                                    <label class="focus-label">Minutes</label>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="submit-section">
                         <button class="btn btn-primary submit-btn" type="submit">Submit</button>
@@ -29,3 +49,4 @@
     </div>
 </div>
 <!-- /Edit Task Status Modal -->
+
