--- a/templates/employee/employee-dashboard.html
+++ b/templates/employee/employee-dashboard.html
@@ -1,7 +1,7 @@
 {% extends 'employee/base.html' %}
 {% load static %}
 {% block body %}
-			
+{% block nav %}{% include 'employee/navigationpanel.html' %}{% endblock nav %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
 			
@@ -33,12 +33,12 @@
 										 <div class="task-list-body">
 											{% for project in user_projects %}
 											<div class="accordion" id="accordionExample">
-												<div class="card-header" id="heading{{ loop.index }}">
-													<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse{{ loop.index }}" aria-expanded="true" aria-controls="collapse{{ loop.index }}">
-													  <span class="text-secondary"><h3><i class="las la-angle-right"></i> {{ project }}</h3></span>
+												<div class="card-header" id="heading{{ project.id }}">
+													<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse{{ project.id }}" aria-expanded="true" aria-controls="collapse{{ project.id }}">
+													  <span class="text-secondary"><h3><i class="las la-angle-right"></i>{{ project }}</h3></span>
 													</button>
 												</div>
-												<div id="collapse{{ loop.index }}" class="collapse" aria-labelledby="heading{{ loop.index }}" data-parent="#accordionExample">
+												<div id="collapse{{ project.id }}" class="collapse" aria-labelledby="heading{{ project.id }}" data-parent="#accordionExample">
 													<ul id="task-list" class="mb-3">
 													  {% for task in user_task %}
 														  {% if task.task_project_name == project.project_name %}
@@ -65,20 +65,28 @@
 									<h5 class="dash-title">Projects</h5>
 									<div class="card">
 										<div class="card-body">
-											<div class="time-list">
+											<div class="time-list mb-5">
 												<div class="dash-stats-list">
 													<h4>{{user_task.count}}</h4>
 													<p>Total Tasks</p>
 												</div>
 												<div class="dash-stats-list">
-													<h4>------</h4>
-													<p>Pending Tasks</p>
-												</div>
-											</div>
-											<div class="request-btn">
-												<div class="dash-stats-list">
 													<h4>{{user_projects.count}}</h4>
 													<p>Total Projects</p>
+												</div>
+											</div>
+											<div class="time-list">
+												<div class="dash-stats-list">
+													<h4>{{new_task}}</h4>
+													<p>New Tasks</p>
+												</div>
+												<div class="dash-stats-list">
+													<h4>{{pending_task}}</h4>
+													<p>Pending Tasks</p>
+												</div>
+												<div class="dash-stats-list">
+													<h4>{{complete_task}}</h4>
+													<p>Complete Tasks</p>
 												</div>
 											</div>
 										</div>
@@ -109,7 +117,11 @@
 									<h5 class="dash-title">Upcoming Holiday</h5>
 									<div class="card">
 										<div class="card-body text-center">
-											<h4 class="holiday-title mb-0">{{holiday.holiday_date|date:'D ,d - F - Y'}} - {{holiday}}</h4>
+											{% if holiday %}
+												<h4 class="holiday-title mb-0">{{holiday.holiday_date|date:'D ,d - F - Y'}} - {{holiday}}</h4>
+											{% else %}
+												<h4 class="holiday-title mb-0 text-muted">Wait until the list is updated.</h4>
+											{% endif %}
 										</div>
 									</div>
 								</section>
