--- a/templates/employee/profile.html
+++ b/templates/employee/profile.html
@@ -1,6 +1,7 @@
 {% extends 'employee/base.html' %}
 {% load static %}
 {% block body %}
+{% block nav %}{% include 'employee/navigationpanel.html' %}{% endblock nav %}
 			<!-- Page Wrapper -->
             <div class="page-wrapper">
 				<div class="show_message">
@@ -17,7 +18,7 @@
 							<div class="col-sm-12">
 								<h3 class="page-title">Profile</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+									<li class="breadcrumb-item"><a href="{% url 'EmployeeIndex' %}">Dashboard</a></li>
 									<li class="breadcrumb-item active">Profile</li>
 								</ul>
 							</div>
