--- a/templates/employee/projects.html
+++ b/templates/employee/projects.html
@@ -18,6 +18,7 @@
 {% endblock head %}
 
 {% block body %}
+{% block nav %}{% include 'employee/navigationpanel.html' %}{% endblock nav %}
 <!-- Page Wrapper -->
 <div class="page-wrapper">
     <div class="show_message">
@@ -35,7 +36,7 @@
                 <div class="col">
                     <h3 class="page-title">Projects</h3>
                     <ul class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+                        <li class="breadcrumb-item"><a href="{% url 'EmployeeIndex' %}">Dashboard</a></li>
                         <li class="breadcrumb-item active">Projects</li>
                     </ul>
                 </div>
