--- a/templates/employee/salary_slip_list.html
+++ b/templates/employee/salary_slip_list.html
@@ -17,7 +17,7 @@
 							<div class="col-sm-12">
 								<h3 class="page-title">Salary Slip</h3>
 								<ul class="breadcrumb">
-									<li class="breadcrumb-item"><a href="index.html">Dashboard</a></li>
+									<li class="breadcrumb-item"><a href="{% url 'EmployeeIndex' %}">Dashboard</a></li>
 									<li class="breadcrumb-item active">Salary Slip List</li>
 								</ul>
 							</div>
