--- a/templates/employee/edit_task_status.html
+++ b/templates/employee/edit_task_status.html
@@ -22,7 +22,7 @@
                         <div class="row ">
                             <div class="col-md-4">
                                 <div class="form-group form-focus select-focus">
-                                    <input type="number" name="task_time_0" class="form-control floating" id="id_task_time_0" value="{{task.task_time.days}}">
+                                    <input type="number" name="task_time_0" class="form-control floating" required id="id_task_time_0" value="{{task.task_time.days}}">
                                     <label class="focus-label">Day</label>
                                 </div>
                             </div>
