--- a/templates/admin/employees.html
+++ b/templates/admin/employees.html
@@ -34,35 +34,42 @@
 					<!-- /Page Header -->
 					
 					<!-- Search Filter -->
-					<div class="row filter-row">
-						<div class="col-sm-6 col-md-3">  
-							<div class="form-group form-focus">
-								<input type="text" class="form-control floating">
-								<label class="focus-label">Employee ID</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<div class="form-group form-focus">
-								<input type="text" class="form-control floating">
-								<label class="focus-label">Employee Name</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<div class="form-group form-focus select-focus">
-								<select class="select floating">
-									<option value="">Select Designation</option>
-									<option value="1">Web Developer</option>
-									<option value="">Web Designer</option>
-									<option value="">Android Developer</option>
-									<option value="">Ios Developer</option>
-								</select>
-								<label class="focus-label">Designation</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<a href="#" class="btn btn-success btn-block"> Search </a>
-						</div>
-                    </div>
+<!--					<div class="row filter-row">-->
+<!--						<div class="col-sm-6 col-md-3">  -->
+<!--							<div class="form-group form-focus">-->
+<!--								<input type="text" class="form-control floating" id="emp_id_search">-->
+<!--								<label class="focus-label">Employee ID</label>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="col-sm-6 col-md-3">-->
+<!--							<div class="form-group form-focus">-->
+<!--								<input type="text" class="form-control floating" id="emp_name_search">-->
+<!--								<label class="focus-label">Employee Name</label>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="col-sm-6 col-md-3">-->
+<!--							<div class="form-group form-focus select-focus">-->
+<!--								<select class="form-control floating" id="emp_department_search">-->
+<!--									<option value="">-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;</option>-->
+<!--									{% for department in department %}-->
+<!--									<option value="{{department}}">{{department}}</option>-->
+<!--									{% endfor %}-->
+<!--								</select>-->
+<!--								<label class="focus-label">Department</label>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--						<div class="col-sm-6 col-md-3">-->
+<!--							<div class="form-group form-focus select-focus">-->
+<!--								<select class="form-control floating" id="emp_technology_search">-->
+<!--									<option value="">-&#45;&#45;&#45;&#45;&#45;&#45;&#45;&#45;</option>-->
+<!--									{% for technology in technology %}-->
+<!--									<option value="{{technology}}">{{technology}}</option>-->
+<!--									{% endfor %}-->
+<!--								</select>-->
+<!--								<label class="focus-label">Technology</label>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--                    </div>-->
 					<!-- Search Filter -->
 
 				<!-- Page Content -->
@@ -110,12 +117,14 @@
 					</div>
 				</div>
 				<!-- /Delete Employee Modal -->
-				
+
             </div>
 			<!-- /Page Wrapper -->
 
         </div>
 		<!-- /Main Wrapper -->
+
+<script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
 
 <script>
 function addEmployee() {
