--- a/templates/admin/tickets.html
+++ b/templates/admin/tickets.html
@@ -89,20 +89,8 @@
 						</div>
 						<div class="col-sm-6 col-md-3">
 							<div class="form-group form-focus select-focus">
-								<input type="date" class="form-control floating" id="ticket_from_date">
-								<label class="focus-label">Ticket Generate - From Date</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<div class="form-group form-focus select-focus">
-								<input type="date" class="form-control floating" id="ticket_to_date">
-								<label class="focus-label">Ticket Generate - To Date</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<div class="form-group form-focus select-focus">
 								<select class="form-control floating" id="ticket_priority_status">
-									<option value="">Select</option>
+									<option value="">------</option>
 									{% for priority in ticket_priority  %}
 										<option value="{{ priority.0 }}">{{ priority.1 }}</option>
 									{% endfor %}
@@ -113,24 +101,12 @@
 						<div class="col-sm-6 col-md-3">
 							<div class="form-group form-focus select-focus">
 								<select class="form-control floating" id="ticket_status_check">
-									<option value="">Select</option>
+									<option value="">-------</option>
 									{% for status in ticket_status %}
 										<option value="{{ status.0 }}">{{ status.1 }}</option>
 									{% endfor %}
 								</select>
 								<label class="focus-label">Ticket Status</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<div class="form-group form-focus select-focus">
-								<input type="date" class="form-control floating" id="status_from_date">
-								<label class="focus-label">Ticket Status - From Date</label>
-							</div>
-						</div>
-						<div class="col-sm-6 col-md-3">
-							<div class="form-group form-focus select-focus">
-								<input type="date" class="form-control floating" id="status_to_date">
-								<label class="focus-label">Ticket Status - To Date</label>
 							</div>
 						</div>
 					</div>
