--- a/templates/employee/project-view.html
+++ b/templates/employee/project-view.html
@@ -74,36 +74,33 @@
 							</div>
 							<div class="project-task">
 								<ul class="nav nav-tabs nav-tabs-top nav-justified mb-0">
-									<li class="nav-item"><a class="nav-link active" href="#all_tasks" data-toggle="tab" aria-expanded="true">All Tasks</a></li>
-									<li class="nav-item"><a class="nav-link active" href="#working_tasks" data-toggle="tab" aria-expanded="true">All Tasks</a></li>
-									<li class="nav-item"><a class="nav-link" href="#pending_tasks" data-toggle="tab" aria-expanded="false">Pending Tasks</a></li>
-									<li class="nav-item"><a class="nav-link" href="#completed_tasks" data-toggle="tab" aria-expanded="false">Completed Tasks</a></li>
+									<li class="nav-item"><a class="nav-link active" href="#all_tasks_search" id="all_tasks_search" data-toggle="tab" aria-expanded="true">All Tasks</a></li>
+									<li class="nav-item"><a class="nav-link" href="#new_tasks_search" id="new_tasks_search" data-toggle="tab" aria-expanded="false">New Tasks</a></li>
+									<li class="nav-item"><a class="nav-link" href="#working_tasks_search" id="working_tasks_search" data-toggle="tab" aria-expanded="false">Working Tasks</a></li>
+									<li class="nav-item"><a class="nav-link" href="#pending_tasks_search" id="pending_tasks_search" data-toggle="tab" aria-expanded="false">Pending Tasks</a></li>
+									<li class="nav-item"><a class="nav-link" href="#completed_tasks_search" id="completed_tasks_search" data-toggle="tab" aria-expanded="false">Completed Tasks</a></li>
 								</ul>
 								<div class="tab-content">
-									<div class="tab-pane show active" id="all_tasks">
+									<div class="tab-pane show active">
 										<div class="task-wrapper">
 											<div class="task-list-container">
 												<div class="task-list-body">
-													<table class="mb-0 w-100" id="task_table">
+													<table class="table mb-0 w-100" id="task_table">
                                                         <thead hidden>
                                                             <tr>
-                                                                <td></td>
-                                                                <td></td>
-                                                                <td></td>
+                                                                <td>Task Status</td>
+                                                                <td>Task Title</td>
                                                             </tr>
                                                         </thead>
                                                         <tbody>
                                                         {% for task_list in project_task_list %}
                                                             {% if task_list.task_project_name.id == projectdetailview.id %}
-                                                            <tr class="border">
+                                                            <tr style="background-color:#F6F4F4;">
                                                                 <td hidden>
                                                                     {{task_list.task_name.task_status}}
                                                                 </td>
-                                                                <td>
+                                                                <td style="padding:0.3rem 0 0.3rem 0.5rem">
                                                                     <span class="la-lg">&#x2022;</span><span class="text-muted mx-3">( {{task_list.task_name.task_status}} )</span><span>{{task_list.task_name.task_title}}</span>
-                                                                </td>
-                                                                <td class="text-right">
-                                                                    <button class="btn mr-2 ml-5 p-0 text-primary text-nowrap" onclick="editTaskStatus({{task_list.task_name.id}})">Update</button>
                                                                 </td>
                                                             </tr>
                                                             {% endif %}
@@ -214,6 +211,32 @@
 				
             </div>
 			<!-- /Page Wrapper -->
+
+
+<script type="text/javascript" src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'js/jquery.dataTables.min.js' %}"></script>
+<script>
+$(document).ready(function () {
+    var table = $('#task_table').DataTable({
+        dom: 'Brt',
+    });
+    $('#all_tasks_search').on('click', function () {
+        table.columns(0).search('', false, true).draw();
+    });
+    $('#new_tasks_search').on('click', function () {
+        table.columns(0).search('New', false, true).draw();
+    });
+    $('#working_tasks_search').on('click', function () {
+        table.columns(0).search('Working', false, true).draw();
+    });
+    $('#pending_tasks_search').on('click', function () {
+        table.columns(0).search('Pending', false, true).draw();
+    });
+    $('#completed_tasks_search').on('click', function () {
+        table.columns(0).search('Completed', false, true).draw();
+    });
+});
+</script>
 
 <script>
 
