--- a/templates/employee/projects.html
+++ b/templates/employee/projects.html
@@ -51,32 +51,32 @@
         <!-- /Page Header -->
 
         <!-- Search Filter -->
-        <div class="row filter-row">
-            <div class="col-sm-6 col-md-3">
-                <div class="form-group form-focus">
-                    <input class="form-control floating" type="text">
-                    <label class="focus-label">Project Name</label>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="form-group form-focus">
-                    <input class="form-control floating" type="text">
-                    <label class="focus-label">Employee Name</label>
-                </div>
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <div class="form-group form-focus select-focus">
-                    <select class="select floating">
-                        <option>Select Roll</option>
-                        <option>Web Developer</option>
-                        <option>Web Designer</option>
-                        <option>Android Developer</option>
-                        <option>Ios Developer</option>
-                    </select>
-                    <label class="focus-label">Designation</label>
-                </div>
-            </div>
-        </div>
+<!--        <div class="row filter-row">-->
+<!--            <div class="col-sm-6 col-md-3">-->
+<!--                <div class="form-group form-focus">-->
+<!--                    <input class="form-control floating" type="text">-->
+<!--                    <label class="focus-label">Project Name</label>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-6 col-md-3">-->
+<!--                <div class="form-group form-focus">-->
+<!--                    <input class="form-control floating" type="text">-->
+<!--                    <label class="focus-label">Employee Name</label>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-sm-6 col-md-3">-->
+<!--                <div class="form-group form-focus select-focus">-->
+<!--                    <select class="select floating">-->
+<!--                        <option>Select Roll</option>-->
+<!--                        <option>Web Developer</option>-->
+<!--                        <option>Web Designer</option>-->
+<!--                        <option>Android Developer</option>-->
+<!--                        <option>Ios Developer</option>-->
+<!--                    </select>-->
+<!--                    <label class="focus-label">Designation</label>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
         <!-- Search Filter -->
 
         <!-- /Page Content -->
